--- a/src/elements/components/theme-switch/switch.module.scss
+++ b/src/elements/components/theme-switch/switch.module.scss
@@ -4,7 +4,7 @@
   width: 2em;
   border-radius: 0.5em;
   border: 1px solid var(--color-border);
-  background-image: linear-gradient(aqua, skyblue);
+  background-image: linear-gradient(#7b9fec, #0051ff);
   position: relative;
   cursor: pointer;
   & > * {
